route to Dashboard when login button clicked

--- a/src/app/pages/auth/login.html
+++ b/src/app/pages/auth/login.html
@@ -35,7 +35,7 @@
                         password?</a>
                 </div>
                 <div class="mt-6">
-                    <button pButton pRipple type="button" [routerLink]="['/']" class="block"
+                    <button pButton pRipple type="button" [routerLink]="['/dashboard']" class="block"
                         style="max-width: 320px; margin-bottom: 32px">Login</button>
                     <span class="flex text-sm text-surface-500 dark:text-surface-400">Don’t have an account?<a
                             class="cursor-pointer ml-1">Sign-up here</a></span>
