--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,5 @@
 @use 'primeicons/primeicons.css';
 @use './assets/demo/demo.scss';
 @use './assets/_overrides.scss';
+/* BootStrap */
+@use "bootstrap-icons/font/bootstrap-icons.scss";
