--- a/src/assets/layout/_sidebar_vertical.scss
+++ b/src/assets/layout/_sidebar_vertical.scss
@@ -22,7 +22,8 @@
             .app-logo-normal {
                 display: inline;
                 img {
-                    height: 1.714rem;
+                    // height: 1.714rem;
+                    height: auto;
                     border: 0 none;
                 }
             }
