Create Empresa form and Aplicante Form

--- a/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
@@ -1411,19 +1411,19 @@
                                     optionLabel="label" optionValue="value" />
                             </div>
                             <div class="mb-6 col-span-12">
-                                <label for="distribuicaoAguaNaoPotavel"
+                                <label for="distribuicaoAgua"
                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                                     h)&nbsp;&nbsp;A rede de distribuição de águas deve ter o número necessário de
                                     dispositivos de saída de água para
                                     assegurar a limpeza e lavagem em todas as suas atividades, incluindo a higiene do
                                     pessoal
                                 </label>
-                                <p-selectbutton [options]="stateOptions" id="distribuicaoAguaNaoPotavel"
-                                    formControlName="distribuicaoAguaNaoPotavel" optionLabel="label"
+                                <p-selectbutton [options]="stateOptions" id="distribuicaoAgua"
+                                    formControlName="distribuicaoAgua" optionLabel="label"
                                     optionValue="value" />
                             </div>
                             <div class="mb-6 col-span-12">
-                                <label for="redeEsgotos"
+                                <label for="redeDistribuicao"
                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                                     i)&nbsp;&nbsp;Pode existir uma rede de distribuição, devidamente sinalizada, de água
                                     não potável para geradores de
@@ -1431,7 +1431,7 @@
                                     serviços auxiliares, desde
                                     que não haja comunicação entre esta e a de água potável
                                 </label>
-                                <p-selectbutton [options]="stateOptions" id="redeEsgotos" formControlName="redeEsgotos"
+                                <p-selectbutton [options]="stateOptions" id="redeDistribuicao" formControlName="redeDistribuicao"
                                     optionLabel="label" optionValue="value" />
                             </div>
                             <div class="mb-6 col-span-12">
