--- a/src/app/pages/usermanagement/userlist.html
+++ b/src/app/pages/usermanagement/userlist.html
@@ -60,7 +60,7 @@
                 </td>
                 <td>
                     <p-button icon="pi pi-pencil" class="mr-2" [rounded]="true" severity="warn" [raised]="true"
-                        variant="outlined" [routerLink]="['/profile', user.username]" />
+                        variant="outlined" [routerLink]="['/utilizador', user.username]" />
                 </td>
             </tr>
         </ng-template>
