--- a/src/app/pages/application-management/application-list/application-list.component.html
+++ b/src/app/pages/application-management/application-list/application-list.component.html
@@ -5,14 +5,14 @@
         [rowsPerPageOptions]="[10, 25, 50]" [globalFilterFields]="['firstName', 'role.name', 'email', 'status']">
         <ng-template #caption>
             <div class="flex flex-wrap gap-2 items-center justify-between">
-                <p-icon-field class="w-full sm:w-80 order-1 sm:order-none">
+                <p-icon-field class="w-1/2 sm:w-80 order-1 sm:order-none">
                     <p-inputicon class="pi pi-search" />
-                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Global Search"
+                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Busca"
                         class="w-full" />
                 </p-icon-field>
-                <button pButton outlined routerLink="/application/create"
+                <!-- <button pButton outlined routerLink="/application/create"
                     class="w-full sm:w-auto flex-order-0 sm:flex-order-1" icon="pi pi-plus"
-                    label="Adicionar novo"></button>
+                    label="Adicionar novo"></button> -->
             </div>
         </ng-template>
         <ng-template #header>
@@ -49,7 +49,7 @@
                     {{candidatura.tipo}}
                 </td>
                 <td>
-                    {{ candidatura.createdAt | date: 'MM/dd/yyyy, HH:mm:ss' }}
+                    {{ candidatura.createdAt | date: 'dd/MMM/yyyy, HH:mm:ss' }}
                 </td>
                 <td>
                     <p-tag value="{{candidatura.estado.replace('_', ' ') | titlecase}}"
