Redesign Auth Pages,removes unnecessary images and refactored

--- a/src/app/pages/auth/verification/verification.component.html
+++ b/src/app/pages/auth/verification/verification.component.html
@@ -1,71 +1,44 @@
-<div [class]="'flex min-h-screen  ' + (layoutService.isDarkTheme() ? 'layout-dark' : 'layout-light')">
-    <!-- <div *ngIf="layoutService.isDarkTheme()" class="w-6/12 h-screen hidden md:block flex-shrink-0"
-        style="max-width: 490px; background-image: url('/images/pages/verification-ondark.png'); background-repeat: no-repeat; background-size: cover">
-    </div>
-    <div *ngIf="!layoutService.isDarkTheme()" class="w-6/12 h-screen hidden md:block flex-shrink-0"
-        style="max-width: 490px; background-image: url('/images/pages/verification-onlight.png'); background-repeat: no-repeat; background-size: cover">
-    </div> -->
-    <div *ngIf="layoutService.isDarkTheme()" class="w-6/12 h-screen hidden md:block flex-shrink-0"
-        style="max-width: 490px; background-image: url('/images/pages/login1.jpg'); background-repeat: no-repeat; background-size: cover">
-    </div>
-    <div *ngIf="!layoutService.isDarkTheme()" class="w-6/12 h-screen hidden md:block flex-shrink-0"
-        style="max-width: 490px; background-image: url('/images/pages/login1.jpg'); background-repeat: no-repeat; background-size: cover">
-    </div>
-    <div class="w-full" style="background: var(--surface-ground)">
-
-        <p-fluid
-            class="min-h-screen text-center w-full flex items-center md:items-start justify-center flex-col bg-auto md:bg-contain !bg-no-repeat"
-            style="padding: 20% 10% 20% 10%; background: var(--exception-pages-image); background-size: contain;">
-            <div class="flex flex-col">
-                <!-- <div class="flex items-center mb-12">
-                    <img src="/images/logo-{{ layoutService.isDarkTheme() ? 'light' : 'dark' }}.png" style="width: 45px"
-                        alt="logo" />
-                    <img src="/images/appname-{{ layoutService.isDarkTheme() ? 'light' : 'dark' }}.png" class="ml-4"
-                        style="width: 100px" alt="logo" />
-                </div> -->
-                <img src="/images/logo.png" style="width: 100px" alt="logo" />
-                <div class="form-container text-left" style="max-width: 320px; min-width: 270px">
-                    <span
-                        class="text-surface-900 dark:text-surface-0 font-bold mb-2 text-2xl m-0 block p-0 ">Verification</span>
-                    <span class="text-surface-600 dark:text-surface-200 font-medium">We have sent code to you
-                        email:</span>
-                    <div class="flex items-center mt-1 mb-6">
-                        <i class="pi pi-envelope text-surface-600 dark:text-surface-200"></i>
-                        <span class="text-surface-900 dark:text-surface-0 font-bold ml-2">
-                            {{ maskEmail(email) }}
-                            <!-- dm**&#64;gmail.com -->
-                        </span>
-                    </div>
-                    <div class="mb-8">
-                        <p-messages></p-messages>
-                    </div>
-                    <div class="flex justify-between w-full items-center gap-4">
-                        <p-inputOtp [formControl]="otpInput" [length]="6" [variant]="'filled'" [autofocus]="true"
-                            [integerOnly]="true">
-                        </p-inputOtp>
-                    </div>
-                </div>
-                <div class="mt-6 text-left" style="max-width: 320px; min-width: 270px">
-                    <div class="flex items-center gap-4">
-                        <button pButton pRipple type="button" [routerLink]="['/']" class="block" severity="danger"
-                            outlined style="max-width: 320px; margin-bottom: 32px">Cancel</button>
-                        <button [loading]="otpLoading" (click)="validateOTP(otpInput)" [disabled]="!otpInput.valid"
-                            pButton pRipple type="button" class="block"
-                            style="max-width: 320px; margin-bottom: 32px">Verify</button>
-                    </div>
-                </div>
-            </div>
-            <div class="flex items-center absolute" style="bottom: 75px">
-                <div class="flex items-center pr-6 mr-6 border-r border-surface-200 dark:border-surface-700">
-                    <!-- <img src="/images/logo-gray.png" style="width: 22px" alt="logo" />
-                    <img src="/images/appname-gray.png" class="ml-2" style="width: 45px" alt="logo" /> -->
-                     <h4>
-                        Ministério de Comércio e Indústria
-                    </h4>
-                </div>
-                <span class="text-sm text-surface-500 dark:text-surface-400 mr-4">Copyright 2025</span>
-            </div>
-        </p-fluid>
-    </div>
-</div>
-<app-configurator [simple]="true" />
+  <p-fluid
+      class="min-h-screen text-center w-full flex items-center md:items-start justify-center flex-col bg-auto md:bg-contain !bg-no-repeat"
+      style="padding: 20% 10% 20% 10%; background: var(--exception-pages-image); background-size: contain;">
+      <div class="flex flex-col">
+          <img src="/images/logo.png" style="width: 100px" alt="logo" />
+          <div class="form-container text-left" style="max-width: 320px; min-width: 270px">
+              <span
+                  class="text-surface-900 dark:text-surface-0 font-bold mb-2 text-2xl m-0 block p-0 ">Verification</span>
+              <span class="text-surface-600 dark:text-surface-200 font-medium">We have sent code to you
+                  email:</span>
+              <div class="flex items-center mt-1 mb-6">
+                  <i class="pi pi-envelope text-surface-600 dark:text-surface-200"></i>
+                  <span class="text-surface-900 dark:text-surface-0 font-bold ml-2">
+                      {{ maskEmail(email) }}
+                  </span>
+              </div>
+              <div class="mb-8">
+                  <p-messages></p-messages>
+              </div>
+              <div class="flex justify-between w-full items-center gap-4">
+                  <p-inputOtp [formControl]="otpInput" [length]="6" [variant]="'filled'" [autofocus]="true"
+                      [integerOnly]="true">
+                  </p-inputOtp>
+              </div>
+          </div>
+          <div class="mt-6 text-left" style="max-width: 320px; min-width: 270px">
+              <div class="flex items-center gap-4">
+                  <button pButton pRipple type="button" [routerLink]="['/']" class="block" severity="danger" outlined
+                      style="max-width: 320px; margin-bottom: 32px">Cancel</button>
+                  <p-button [loading]="otpLoading" (click)="validateOTP(otpInput)" [disabled]="!otpInput.valid" pButton
+                      pRipple type="button" class="block" [style]="{ 'max-width': '320px', 'margin-bottom': '32px' }">
+                      Verify</p-button>
+              </div>
+          </div>
+      </div>
+      <div class="flex items-center absolute" style="bottom: 75px">
+          <div class="flex items-center pr-6 mr-6 border-r border-surface-200 dark:border-surface-700">
+              <h4>
+                  Ministério de Comércio e Indústria
+              </h4>
+          </div>
+          <span class="text-sm text-surface-500 dark:text-surface-400 mr-4">Copyright 2025</span>
+      </div>
+  </p-fluid>
