--- a/src/app/pages/auth/activation/activation.component.html
+++ b/src/app/pages/auth/activation/activation.component.html
@@ -1,47 +1,38 @@
-<div [class]="'flex min-h-screen  ' + (layoutService.isDarkTheme() ? 'layout-dark' : 'layout-light')">
-    <div *ngIf="layoutService.isDarkTheme()" class="w-6/12 h-screen hidden md:block flex-shrink-0"
-        style="max-width: 490px; background-image: url('/images/pages/login1.jpg'); background-repeat: no-repeat; background-size: cover ;height: auto">
-    </div>
-    <div *ngIf="!layoutService.isDarkTheme()" class="w-6/12 h-screen hidden md:block flex-shrink-0"
-        style="max-width: 490px; background-image: url('/images/pages/login1.jpg'); background-repeat: no-repeat; background-size: cover;height: auto">
-    </div>
-    <div class="w-full" style="background: var(--surface-ground)">
-        <p-fluid
-            class="min-h-screen text-center w-full flex items-center md:items-start justify-start flex-col bg-auto md:bg-contain !bg-no-repeat"
-            style="padding: 10% 10% 20% 10%; background: var(--exception-pages-image); background-size: contain;">
-            <div class="flex flex-col">
-                <div class="flex items-center justify-center">
-                    <img src="/images/logo.png" style="width: 100px" alt="logo" />
-                </div>
-                <div class="mt-2 mb-8">
-                    <p class="text-xl">
-                        Trade License Management System
-                    </p>
-                </div>
-                @if (notification) {
-                <p-message [severity]="notification.state">
-                    <ng-template #icon>
-                        <i [class]="notification.icon" style="font-size: 2.5rem"></i> &nbsp;
-                    </ng-template>
-                    <span class="ml-2 text-lg text-left">
-                        {{ notification.message }}
-                    </span>
-                </p-message>
-                }
-                <div class="mt-6 text-center flex items-center justify-center">
-                    <button routerLink="/auth/login" icon="pi pi-sign-in" pButton label="Entrar" style="max-width: 200px"></button>
-                </div>
+ <p-fluid
+     class="min-h-screen text-center w-full flex items-center md:items-start justify-start flex-col bg-auto md:bg-contain !bg-no-repeat"
+     style="padding: 10% 10% 20% 10%; background: var(--exception-pages-image); background-size: contain;">
+     <div class="flex flex-col">
+         <div class="flex items-center justify-center">
+             <img src="/images/logo.png" style="width: 100px" alt="logo" />
+         </div>
+         <div class="mt-2 mb-8">
+             <p class="text-xl">
+                 Trade License Management System
+             </p>
+         </div>
+         @if (notification) {
+         <p-message [severity]="notification.state">
+             <ng-template #icon>
+                 <i [class]="notification.icon" style="font-size: 2.5rem"></i> &nbsp;
+             </ng-template>
+             <span class="ml-2 text-lg text-left">
+                 {{ notification.message }}
+             </span>
+         </p-message>
+         }
+         <div class="mt-6 text-center flex items-center justify-center">
+             <button routerLink="/auth/login" icon="pi pi-sign-in" pButton label="Entrar"
+                 style="max-width: 200px"></button>
+         </div>
 
-            </div>
+     </div>
 
-            <div class="flex items-center absolute" style="bottom: 75px">
-                <div class="flex items-center pr-6 mr-6 border-r border-surface-200 dark:border-surface-700">
-                    <h4>
-                        Ministério de Comércio e Indústria
-                    </h4>
-                </div>
-                <span class="text-sm text-surface-500 dark:text-surface-400 mr-4">Copyright 2025</span>
-            </div>
-        </p-fluid>
-    </div>
-</div>
+     <div class="flex items-center absolute" style="bottom: 75px">
+         <div class="flex items-center pr-6 mr-6 border-r border-surface-200 dark:border-surface-700">
+             <h4>
+                 Ministério de Comércio e Indústria
+             </h4>
+         </div>
+         <span class="text-sm text-surface-500 dark:text-surface-400 mr-4">Copyright 2025</span>
+     </div>
+ </p-fluid>
